--- a/sass/partials/_utilities.scss
+++ b/sass/partials/_utilities.scss
@@ -78,8 +78,5 @@ ul.list-grid {
       background-color: white;
       padding-top: 1px;
     }
-    > li:first-child {
-      background: none;
-    }
   }
 }
